2007-11-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/relcalc.glade: don't do connect in glade, we need key
	* src/plugins/Leak.py: use os.sep, not + '/'
	* src/plugins/RelCalc.py: Don't keep recalculating relation map of the
	active person, do it once. 50% faster. Make sure all objects can be
	collected by the garbage collector
	* src/Relationship.py: allow to connect to database. Map of first 
	person is stored, only to be removed if database changed, or it
	concerns a different person. This reduces calculation with 50%
	* src/DisplayState.py: don't recalculate home person every time, don't
	call relationship calc on every click, only call it when the people
	are different

2007-11-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: added comparison operator for match()
	* src/Utils.py: uses new match comparison

2007-11-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Utils.py: probably_alive now takes date rather than year
	* src/gen/proxy/living.py: create date from year
	* src/gen/lib/date.py: added methods to do date math
	  and return Date object (set_yr_mon_day_offset, copy_offset_ymd)
	* src/plugins/Calendar.py: updated to use probably alive date
	* src/Filters/Rules/Person/_ProbablyAlive.py: parse entry as date

2007-11-20  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/Makefile.am: up to date

2007-11-19  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/Makefile.am (dist_pkgdata_DATA): Use proper name.

2007-11-19  Brian Matherly <brian@gramps-project.org>
	* src/plugins/IndivComplete.py: Fix crash with alternate parents.

2007-11-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: many improvements and bug fixes
	* src/plugins/all_relations.py: bug fixes
	* src/plugins/RelCalc.py: use new API
	* src/plugins/rel_nl.py: finished, removed comment
	* src/plugins/rel_it.py: finished
	* src/plugins/rel_pl.py: move old code here away from Relationship